ny databas och fixa julkalender

--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> 
         <title>Julkalender</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="Projekt-1Jul.CSS">
@@ -87,9 +87,11 @@
         </script>
 
         <script>
-            function pressed1(){
-                document.getElementById("b1").src = "tomteluva.png";
-            }
+            if(Date == 01/12/any){
+                function pressed1(){
+                    document.getElementById("b1").src = "tomteluva.png";
+                }
+            }    
             function pressed2(){
                 document.getElementById("b2").src = "tomteluva.png";
             }  
