uppdatering av projektet & ny bild

--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -87,79 +87,197 @@
         </script>
 
         <script>
-            if(Date == 01/12/any){
-                function pressed1(){
+            function pressed1(){
+                var today = document.getElementById("current_date").value;
+                if(today === 01/12/22){
                     document.getElementById("b1").src = "tomteluva.png";
-                }
-            }    
+                }else{
+                    document.getElementById("b0").src = "";
+                }    
+            }   
             function pressed2(){
-                document.getElementById("b2").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 02/12/22){
+                    document.getElementById("b2").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed3(){
-                document.getElementById("b3").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 03/12/22){
+                    document.getElementById("b3").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed4(){
-                document.getElementById("b4").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 04/12/22){
+                    document.getElementById("b4").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed5(){
-                document.getElementById("b5").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 05/12/22){
+                    document.getElementById("b5").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed6(){
-                document.getElementById("b6").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 06/12/22){
+                    document.getElementById("b6").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed7(){
-                document.getElementById("b7").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 07/12/22){
+                    document.getElementById("b7").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }
             function pressed8(){
-                document.getElementById("b8").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 08/12/22){
+                    document.getElementById("b8").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed9(){
-                document.getElementById("b9").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 09/12/22){
+                    document.getElementById("b9").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed10(){
-                document.getElementById("b10").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 10/12/22){
+                    document.getElementById("b10").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed11(){
-                document.getElementById("b11").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 11/12/22){
+                    document.getElementById("b11").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed12(){
-                document.getElementById("b12").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 12/12/22){
+                    document.getElementById("b12").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed13(){
-                document.getElementById("b13").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 13/12/22){
+                    document.getElementById("b13").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed14(){
-                document.getElementById("b14").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 14/12/22){
+                    document.getElementById("b14").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed15(){
-                document.getElementById("b15").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 15/12/22){
+                    document.getElementById("b15").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed16(){
-                document.getElementById("b16").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 16/12/22){
+                    document.getElementById("b16").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed17(){
-                document.getElementById("b17").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 17/12/22){
+                    document.getElementById("b17").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed18(){
-                document.getElementById("b18").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 18/12/22){
+                    document.getElementById("b18").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed19(){
-                document.getElementById("b19").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 19/12/22){
+                    document.getElementById("b19").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed20(){
-                document.getElementById("b20").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 20/12/22){
+                    document.getElementById("b20").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed21(){
-                document.getElementById("b21").src = "tomteluva.png";                
+                var today = document.getElementById("current_date").value;
+                if(today === 21/12/22){
+                    document.getElementById("b21").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }                
             }  
             function pressed22(){
-                document.getElementById("b22").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 22/12/22){
+                    document.getElementById("b22").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed23(){
-                document.getElementById("b23").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 23/12/22){
+                    document.getElementById("b23").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
             function pressed24(){
-                document.getElementById("b24").src = "tomteluva.png";
+                var today = document.getElementById("current_date").value;
+                if(today === 24/12/22){
+                    document.getElementById("b24").src = "tomteluva.png";
+                }else{
+                    document.getElementById("b0").src = "";
+                }
             }  
         </script>   
     </body>
