--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -92,7 +92,7 @@
                 if(today === 01/12/22){
                     document.getElementById("b1").src = "tomteluva.png";
                 }else{
-                    document.getElementById("b0").src = "";
+                    document.getElementById("b0").src = "RedX.jpg";
                 }    
             }   
             function pressed2(){
