ny kod och bild

--- a/projekt-1Jul.html
+++ b/projekt-1Jul.html
@@ -8,6 +8,9 @@
     <body>
         <h1>Julkalendern</h1>
 
+        <div 2>
+            <img id="RedX.jpg" alt="">
+        </div>
         <div onclick="pressed1()">1
             <img id="b1" src="brown.png" alt="">
         </div>
